lang/tests/raw_dumps/statements.stderr
error: unexpected character
  --> tests/raw_dumps/statements.ssl:11:1
   |
11 | type C1:C4 = $fruits
   | ^ `t` was not expected here
   |
Error: Parse
